--- a/Contas/package.json
+++ b/Contas/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-if": "^4.1.5",
-    "vite-plugin-fs": "^1.1.0"
+    "vite-plugin-fs": "^1.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
